tests/parsing/smtlib/v2.7/errors/140_datatype_arity_dec_bad_num_1.smt2
(set-logic ALL)
(declare-datatypes ((foo _)))
